# rust-Game

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLANS.md  README.md  package-lock.json  package.json  prompt.md  rust_game_codex_requirements.txt  skills-lock.json
.claude/: settings.json
.claude/hooks/: post-commit-reminder.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml
.omx/: metrics.json
.omx/logs/: turns-2026-04-01.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
assets/configs/: audio.ron  augments.ron  balance.ron  boss.ron  curses.ron  effects.ron  elite_affixes.ron  enemies.ron  events.ron  game_balance.ron  player.ron  rewards.ron  rooms.ron  runes.ron  shop.ron  skills.ron
docs/: 00_index.md  01_build_and_run.md  02_architecture.md  03_module_design.md  04_api_and_data_model.md  05_iteration_history.md  06_multiplayer_and_risks.md  07_extension_guide.md  architecture_refactor_suggestions.md  ask.md  coop_debug_log.md  coop_network_audit.md  meeting_briefing.md  progress_and_todo.md  project_overview_and_coop_review.md  repository_status_report_2026-04-28.md  test_mode_temp.md
saves/: run_save.ron  tutorial_flags.ron
scripts/: codex-from-plan.ps1  codex-from-plan.sh
src/: app.rs  constants.rs  main.rs  prelude.rs  states.rs
src/coop/: components.rs  host.rs  mod.rs  net.rs  runtime.rs  ui.rs
src/core/: achievements.rs  assets.rs  audio.rs  camera.rs  events.rs  input.rs  local_debug.rs  mod.rs  save.rs  test_mode.rs
src/data/: definitions.rs  mod.rs  (+2 more)
(+114 files in other folders)
